feat(download): added download
